# xgcondb

./: README.md  auto-build.py  linux-test.sh  pyproject.toml  requirements.txt
driver/linux-x64/: __init__.py
driver/win-x64/: __init__.py  _pyxgdb27.pyd  _pyxgdb310.pyd  _pyxgdb311.pyd  _pyxgdb34.pyd  _pyxgdb36.pyd  _pyxgdb37.pyd  _pyxgdb38.pyd  _pyxgdb39.pyd
src/xgcondb/: __about__.py
tests/: __init__.py
