[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xgcondb"
dynamic = ["version"]
description = 'XuGu Database Python Driver'
readme = "README.md"
requires-python = ">=3.6, <3.10"
license = "Apache-2.0"
keywords = ['XuGu', 'DB', 'xgcondb']
authors = [
    { name = "Jedore", email = "jedorefight@gmail.com" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    #  "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Jedore/XuGu-Python-Driver#readme"
Issues = "https://github.com/Jedore/XuGu-Python-Driver/issues"
Source = "https://github.com/Jedore/XuGu-Python-Driver"

[tool.hatch.version]
path = "src/xgcondb/__about__.py"

[tool.hatch.envs.default]
[tool.hatch.envs.types]
extra-dependencies = [
    "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/xgcondb tests}"

[tool.hatch.build.targets.wheel]
packages = ["src/xgcondb"]
only-packages = true
artifacts = ["*.pyd", "*.so"]

[tool.coverage.run]
source_pkgs = ["xgcondb", "tests"]
branch = true
parallel = true
omit = [
    "src/xgcondb/__about__.py",
]

[tool.coverage.paths]
xgcondb = ["src/xgcondb", "*/xgcondb/src/xgcondb"]
tests = ["tests", "*/xgcondb/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
